# SignalForge

./: .env.example  .gitignore  3sqdqovgjs0tanlugfu4gffsvkblt9hp.darc  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  kjnhprgdavj1l7hbusnggs73nddijubh  manifest  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/rules/: business-rule-tests.md  ci-supply-chain.md  cli-layer.md  diff-renderer.md  docs-publishing.md  grade-layer.md  ingest-layer.md  llm-drafter.md  manifest-readers.md  prune-engine.md  python-build.md  safety-layer.md  skill-parity.md  testing-signal.md  warehouse-adapters.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
audits/: index.html
cli-ops/: index.html
codecov-ops/: index.html
cost-estimate-ops/: index.html
diff-ops/: index.html
docs/: audits.md  cli-ops.md  codecov-ops.md  cost-estimate-ops.md  diff-ops.md  draft-ops.md  e2e-smoke-test.md  grade-ops.md  ingest-ops.md  llm-providers-ops.md  manifest-loader-ops.md  prune-ops.md  safety-ops.md  skills.md  snowflake-e2e-setup.md  warehouse-adapter-ops.md
docs/research/: README.md  dbt-ai-tools-deep-dive.md  dbt-claude-technical-surface.md  dbt-pain-deep-dive.md  dbt-research-index.md  dbt-tool-design-sketches.md  dbt-tooling-opportunity-report.md
docs/rules/: docs-publishing.md  warehouse-adapters.md
draft-ops/: index.html
e2e-smoke-test/: index.html
grade-ops/: index.html
ingest-ops/: index.html
llm-providers-ops/: index.html
manifest-loader-ops/: index.html
plans/super/: 1-project-scaffolding.md  10-e2e-bigquery-smoke.md  104-ingest-external-tests.md  105-prune-existing-cli.md  116-business-rule-tests.md  119-snowflake-skeleton.md  120-snowflake-profile.md  121-prune-snowflake-dialect.md  122-snowflake-sampling.md  123-snowflake-estimate-degrade.md  124-snowflake-test-docs.md  130-snowflake-estimate-explain.md  135-provider-neutral-llm-seam.md  136-openai-grading-provider.md  137-gemini-grading.md  139-snowflake-sample-shape.md  141-claude-skill-install.md  155-gemini-truncation-e2e-gap.md  157-e2e-cost-and-parallel.md  159-drafter-column-types.md  163-drafter-business-rules-fidelity.md  169-row-count-between.md  2-manifest-loader.md  22-temp-table-sample.md  27-codecov-coverage.md  3-bigquery-adapter.md  35-prune-enabled-doc-reframe.md  36-estimate-cost-preview.md  37-multi-model-select.md  4-pii-safety.md  47-init-demo.md  5-llm-draft-pipeline.md  50-diff-kept-uncertain.md  6-prune-engine.md  7-quality-grader.md  8-diff-renderer.md  9-cli-entrypoint.md
prune-ops/: index.html
safety-ops/: index.html
scripts/: measure_e2e_cost.py
search/: search_index.json
skills/: index.html
snowflake-e2e-setup/: index.html
src/signalforge/: __init__.py  demo.py  errors.py
tests/: test_audit_completeness.py  test_contributing_e2e_enumeration_parity.py  test_demo.py  test_demo_fixture_parity.py  test_smoke.py  test_wheel_packaging.py
tests/_common/: test_json_payload.py  test_path_safety.py  test_timestamp.py
tests/cli/: _e2e_helpers.py  _factories.py  test_5_surface_parity_force.py  test_5_surface_parity_init_demo.py  test_5_surface_parity_install_skill.py  test_5_surface_parity_prune_existing.py  test_5_surface_parity_select.py  test_austin_fixture_config.py  test_batch_emission.py  test_e2e_bigquery_smoke.py  test_e2e_business_rules.py  test_e2e_estimate_openai.py  test_e2e_gemini_smoke.py  test_e2e_helpers.py  test_e2e_openai_smoke.py  test_e2e_snowflake_smoke.py  test_estimate.py  test_estimate_engine.py  test_estimate_render.py  test_exit_codes.py  test_format_error_to_stderr.py  test_generate.py  test_generate_batch.py  test_generate_estimate.py  test_generate_select_flag.py  test_init_demo.py  test_install_skill.py  test_lint.py  test_main.py  test_no_direct_stderr_print.py  test_prune_existing.py  test_select_integration.py  test_skill_cli_parity.py  test_smoke.py  test_subprocess_smoke.py
tests/diff/: _snapshot_inputs.py  test_ansi_safety.py  test_artifact_id.py  test_config.py  test_drift_detector.py  test_emitter.py  test_engine.py  test_errors.py  test_markdown_safety.py  test_models.py  test_public_api.py  test_render_to_text.py  test_renderers.py  test_sidecar.py  test_snapshot_fixtures.py  test_test_file_writer.py
tests/draft/: test_audit.py  test_config.py  test_drift_detector.py  test_errors.py  test_exclude_tests.py  test_gemini_draft_live.py  test_gemini_neutrality.py  test_models.py  test_parser.py  test_prompts.py  test_public_api.py  test_schema.py  test_smoke_real_api.py  test_smoke_real_api_openai.py
tests/fixtures/: .gitignore  README.md  _generate_medium.py  regenerate.sh
tests/grade/: _fake.py  test_audit.py  test_config.py  test_drift_detector.py  test_engine.py  test_errors.py  test_gemini_grade_live.py  test_gemini_neutrality.py  test_models.py  test_parser.py  test_prompts.py  test_provider_neutrality.py  test_provider_neutrality_openai.py  test_rubric.py  test_smoke_real_api.py  test_smoke_real_api_openai.py
tests/ingest/: test_anchor.py  test_models.py  test_parser.py  test_reader.py  test_test_files.py
tests/llm/: _fake.py  _fake_gemini.py  _fake_openai.py  _fake_provider.py  test_anthropic_provider_via_fake.py  test_client.py  test_client_retries.py  test_client_shim.py  test_errors.py  test_fake_gemini.py  test_gemini_client_confinement.py  test_gemini_live.py  test_gemini_provider_via_fake.py  test_logger_grep_gate.py  test_models.py  test_openai_client_confinement.py  test_openai_provider_via_fake.py  test_pricing.py  test_prompt_cache_stability.py  test_providers.py  test_public_api.py
tests/manifest/: test_austin_fixture_loads.py  test_errors.py  test_loader.py  test_models.py  test_multi_fixture_loads.py  test_public_api.py  test_resolve.py  test_select.py  test_template.py
tests/prune/: test_audit.py  test_compiler.py  test_compiler_fakesnow.py  test_compiler_import_guard.py  test_config.py  test_drift_detector.py  test_engine.py  test_errors.py  test_integration_bigquery.py  test_models.py  test_smoke.py
warehouse-adapter-ops/: index.html
(+355 files in other folders)
