[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "signalforge"
dynamic = ["version"]
description = "Draft dbt schema.yml, tests, and docs with an LLM, then prune candidates against real warehouse data so only signal-bearing artifacts ship."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "wjduenow"}]
dependencies = ["pydantic>=2.5,<3"]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "dbt-core>=1.8,<2"]

[project.urls]
Homepage = "https://github.com/wjduenow/SignalForge"
Issues = "https://github.com/wjduenow/SignalForge/issues"

[tool.hatch.version]
path = "src/signalforge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/signalforge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
minversion = "7.0"
strict_markers = true
markers = [
  "unit: unit-level tests with no FS I/O beyond fixtures",
  "integration: tests exercising the full load() round-trip",
  "error: tests asserting an exception with its remediation",
]
