[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "signalforge-dbt"
dynamic = ["version"]
description = "Draft dbt schema.yml, tests, and docs with an LLM, then prune candidates against real warehouse data so only signal-bearing artifacts ship."
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "wjduenow"}]
dependencies = [
  "google-cloud-bigquery>=3.20,<4",
  "PyYAML>=6,<7",
  # pydantic <3: industry-standard major-pin; v3 will be a breaking change worth a deliberate bump.
  "pydantic>=2.5,<3",
  # anthropic <2.0: lock the major so a 1.x release doesn't block fresh installs without forcing a SignalForge cut.
  "anthropic>=0.50,<2.0",
  # sqlglot pinned to a single major: powers the drafter parser's
  # type-coherence defence for `custom_sql` (#159 / DEC-005). Previously
  # a transitive via `fakesnow` (dev-only); type-defence correctness is
  # load-bearing so a direct runtime pin is required.
  "sqlglot>=30,<31",
]

[project.optional-dependencies]
# Retained for `pip install -e ".[dev]"` back-compat. CI runs uv (`uv sync --dev`)
# which consumes `[dependency-groups].dev` below; the two lists are kept in sync.
# pyright pinned exactly: tool bumps are tested via deliberate maintainer upgrades, not CI surprise from a new release.
dev = ["ruff", "pyright==1.1.409", "pytest", "dbt-core>=1.8,<2", "types-PyYAML>=6,<7", "pytest-cov>=5.0", "pytest-xdist>=3.6,<4", "snowflake-connector-python>=3,<4", "fakesnow>=0.9", "openai>=1.40,<3.0", "tiktoken>=0.7,<1.0", "google-genai>=0.5,<1", "sqlglot>=30,<31"]
# Optional warehouse extra: pulls the Snowflake SDK only when the operator
# installs `signalforge-dbt[snowflake]`. The base install stays BigQuery-only.
snowflake = ["snowflake-connector-python>=3,<4"]
# Optional LLM provider extra: pulls the OpenAI SDK + tiktoken local
# tokeniser only when the operator installs `signalforge-dbt[openai]`. The
# base install stays Anthropic-only. tiktoken powers the local pre-send
# token count for the `--estimate` path (OpenAI has no server-side
# count_tokens API; supports_token_count=False on OpenAIProvider). See
# .claude/rules/llm-drafter.md for the three-slot lockstep convention.
openai = ["openai>=1.40,<3.0", "tiktoken>=0.7,<1.0"]
# Optional LLM-provider extra: pulls the Google Gen AI SDK only when the operator
# installs `signalforge-dbt[gemini]`. The base install stays Anthropic-only.
gemini = ["google-genai>=0.5,<1"]

[dependency-groups]
# uv-native dependency groups (PEP 735).
#
# `docs` is a standalone group so the GitHub Pages build/deploy jobs
# (`.github/workflows/ci.yml`) can `uv sync --only-group docs` and pull in
# JUST MkDocs + plugins — not the heavy `dev` set (dbt-core, pyright, etc.).
# The mkdocs deps are uv-only; pip contributors don't build docs.
docs = [
  "mkdocs-material>=9.0",
  "mkdocs-include-markdown-plugin>=6.0",
]
# `dev` mirrors `[project.optional-dependencies].dev` plus `build` (powers the
# wheel_smoke marker in `tests/test_wheel_packaging.py`) and the `docs` group
# (so a single `uv sync --dev` gives a contributor everything, docs included).
dev = [
  "ruff",
  "pyright==1.1.409",
  "pytest",
  "dbt-core>=1.8,<2",
  "types-PyYAML>=6,<7",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6,<4",
  "build>=1.2,<2",
  "snowflake-connector-python>=3,<4",
  "fakesnow>=0.9",
  "openai>=1.40,<3.0",
  "tiktoken>=0.7,<1.0",
  "google-genai>=0.5,<1",
  "sqlglot>=30,<31",
  {include-group = "docs"},
]

[project.scripts]
signalforge = "signalforge.cli:main"

[project.urls]
Homepage = "https://github.com/wjduenow/SignalForge"
Issues = "https://github.com/wjduenow/SignalForge/issues"

[tool.hatch.version]
path = "src/signalforge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/signalforge"]
# `include` is defence-in-depth for the demo tree under `src/signalforge/_demo/`
# — Hatchling's default `packages` glob picks `.py` reliably but its behaviour
# on non-`.py` data files (and dotfiles like `.gitignore` per DEC-006 of
# `plans/super/47-init-demo.md`) is not contractually guaranteed across releases.
# The wheel_smoke marker (`tests/test_wheel_packaging.py`) gates the demo file
# set in the built artifact; this directive is the production-side guarantee.
include = ["src/signalforge/_demo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
# `--import-mode=importlib` lets us share basenames across test dirs (e.g.
# tests/manifest/test_errors.py and tests/warehouse/test_errors.py) without
# adding tests/__init__.py — keeps `testing-signal.md`'s no-init rule intact.
addopts = "-ra --strict-markers --import-mode=importlib -m 'not bigquery and not anthropic and not cli_subprocess and not e2e and not wheel_smoke and not snowflake and not openai and not gemini' --cov=signalforge --cov-report=xml --cov-report=term-missing --cov-fail-under=80"
minversion = "7.0"
strict_markers = true
markers = [
  "unit: unit-level tests with no FS I/O beyond fixtures",
  "integration: tests exercising the full load() round-trip",
  "error: tests asserting an exception with its remediation",
  "bigquery: tests requiring BigQuery credentials (gated by SF_RUN_BQ=1)",
  "safety: tests for the PII safety layer",
  "llm: tests for the centralized Anthropic SDK seam",
  "draft: tests for the schema-drafting layer",
  "anthropic: real-API smoke test (requires ANTHROPIC_API_KEY; excluded from default CI)",
  "cli_subprocess: belt-and-braces subprocess-driven CLI smoke (skipped by default; run with -m cli_subprocess)",
  "e2e: end-to-end smoke test against real Anthropic + real BigQuery (gated by SF_RUN_BQ=1, ANTHROPIC_API_KEY, GOOGLE_CLOUD_PROJECT; skipped by default)",
  "wheel_smoke: maintainer-only; builds the wheel via `python -m build --wheel` and inspects the artifact for the demo file set (run with --no-cov)",
  "snowflake: maintainer-only; offline compiled-SQL validation via fakesnow AND the gated live EXPLAIN-estimate certification (run with --no-cov; live tests self-skip without SF_RUN_SNOWFLAKE + connection env vars)",
  "openai: real-API smoke test against OpenAI (requires SF_RUN_OPENAI=1 + OPENAI_API_KEY; excluded from default CI)",
  "gemini: real-API smoke test against Gemini (requires SF_RUN_GEMINI=1 + GOOGLE_API_KEY; excluded from default CI)",
]
